# beepiano

./: CMakeLists.txt  README.txt  main.cpp
Recordings/: README  rec_Amazing Recording.txt  rec_Bohemian Rhapsody - Queen.txt  rec_lullaby.txt
Recordings/PlayAlong/: rec_1jingle Hello.txt  rec_2jingle Bye.txt  rec_All My Loving - The Beatles.txt  rec_Bohemian Rhapsody - Queen.txt  rec_What Once Was - Her's.txt  rec_fur_elise.txt
include/: Beepiano.h  Keyboard.h  Menu.h  Note.h  Recorder.h  Recording.h  Rest.h  Utilities.h
src/: Beepiano.cpp  Keyboard.cpp  Menu.cpp  Note.cpp  Recorder.cpp  Recording.cpp  Rest.cpp
